--- a/lecture.html
+++ b/lecture.html
@@ -2,6 +2,5 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; URL='http://homepages.see.leeds.ac.uk/~georjb/gdva/data_visualization/session_sl
-ides.pdf'" />
+<meta http-equiv="refresh" content="0; URL='http://www.roger-beecham.com/GEOG5042-data-visualization/session_slides.pdf'" />
 </html>
